Add class for keywords sketch

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             </div>
         </div>
     </div>
-    <div id="canvas"></div>
+    <div id="sketches">
+        <div id="canvas-keywords"></div>
+        <div id="canvas-papers"></div>
+    </div>
 </body>
 
 </html>
