Fix canvas positions

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             </div>
         </div>
     </div>
+    <div id="sketch-keywords"></div>
+    <div id="sketch-papers"></div>
 </body>
 
 </html>
