--- a/about.html
+++ b/about.html
@@ -16,20 +16,40 @@
         <a class="active" href="#About">About</a>
     </div>
     <div class="about">
-        <h1>About Career Path Visualization</h1>
-        <h2>Subject: Visualize a Research Career</h2>
-        <p>The visualization that we propose is a nonlinear ordered representation that allows to follow the publications of an author in time. It also allows you to see the topics an author has addressed by displaying the keywords most present in the publication.</p>
+        <h1>Research career visualization</h1>
+        <p>
+            The visualization that we propose is a nonlinear ordered
+            representation that allows to follow the publications of an author.
+            It also allows you to see the topics an author has
+            addressed by displaying the most frequent keywords of its papers.
+        </p>
         <div class="content">
             <img style="width: 15%; height: auto;" src="circle.png"/>
-            <p style="margin-left: 95px;">The circles represent the papers, they are accompanied by the year of publication and their size is proportional to the number of citations. Hovering the circle displays more information like title and the number of citations. It also highlight the co-authors and keywords of the article.</p>
+            <p style="margin-left: 95px;">
+                The circles represent the papers, they are accompanied by the
+                year of publication and their size is proportional to the number
+                of citations. Hovering the circle displays more information like
+                the title and the number of citations. It also highlight the
+                co-authors and keywords of the paper.
+            </p>
         </div>
         <div class="content margin-top">
             <img style="width: 15%; height: auto;" src="co-author.png"/>
-            <p style="margin-left: 94px;">The squares represent the co-authors and are related to the articles in which they participated. Hovering the square displays more information like name of the co-author and the total number of citations of the co-author. It also highlight articles in which they participated.</p>
+            <p style="margin-left: 94px;">
+                The squares represent the co-authors and are related to the
+                papers in which they participated. Hovering the square
+                displays more information like the name of the co-author and the
+                cumulative citations count of the co-author. It also highlight
+                papers in which they participated.
+            </p>
         </div>
         <div class="content margin-top">
             <img style="width: 15%; height: auto;" src="keywords.png"/>
-            <p style="margin-left: 50px;">The keywords are at most twenty. These are the most recurrent keywords in an author's work. They are calculated from the keywords of the article, but also from the title and the abstract.</p>
+            <p style="margin-left: 50px;">
+                The keywords are at most twenty. These are the most recurrent
+                keywords in an author's work. They are extracted from the
+                paper's keywords title and abstract.
+            </p>
         </div>
     </div>
 </body>
