Move images to img folder

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             addressed by displaying the most frequent keywords of its papers.
         </p>
         <div class="content">
-            <img style="width: 15%; height: auto;" src="circle.png"/>
+            <img style="width: 15%; height: auto;" src="img/circle.png"/>
             <p style="margin-left: 95px;">
                 The circles represent the papers, they are accompanied by the
                 year of publication and their size is proportional to the number
@@ -34,7 +34,7 @@
             </p>
         </div>
         <div class="content margin-top">
-            <img style="width: 15%; height: auto;" src="co-author.png"/>
+            <img style="width: 15%; height: auto;" src="img/co-author.png"/>
             <p style="margin-left: 94px;">
                 The squares represent the co-authors and are related to the
                 papers in which they participated. Hovering the square
@@ -44,7 +44,7 @@
             </p>
         </div>
         <div class="content margin-top">
-            <img style="width: 15%; height: auto;" src="keywords.png"/>
+            <img style="width: 15%; height: auto;" src="img/keywords.png"/>
             <p style="margin-left: 50px;">
                 The keywords are at most twenty. These are the most recurrent
                 keywords in an author's work. They are extracted from the
